# progetto_labiagi

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/ped/: build.check.004.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.check.011.log.stderr  build.check.015.log.stderr  build.check.114.log.stderr  build.check.115.log.stderr  build.check.116.log.stderr  build.check.448.log.stderr  build.check.449.log.stderr  build.check.451.log.stderr  build.cmake.000.log.stderr  build.make.005.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.027.log.stderr  build.make.037.log.stderr  build.make.039.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.046.log.stderr  build.make.048.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.055.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.060.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  (+183 more)
src/ped/: CMakeLists.txt  package.xml
src/ped/msg/: utenti.msg
src/ped/src/: ped_client.cpp  ped_server.cpp  ped_status.cpp  ped_utenti.cpp  stanze.txt  testo.txt  utils.h
src/ped/srv/: set_user.srv
(+183 files in other folders)
